Continue RecordParserDefinition refactoring, switch to java 21