@@ -1,5 +1,11 @@
 package massbank;
 
+import edu.ucdavis.fiehnlab.spectra.hash.core.Spectrum;
+import edu.ucdavis.fiehnlab.spectra.hash.core.Splash;
+import edu.ucdavis.fiehnlab.spectra.hash.core.SplashFactory;
+import edu.ucdavis.fiehnlab.spectra.hash.core.types.Ion;
+import edu.ucdavis.fiehnlab.spectra.hash.core.types.SpectraType;
+import edu.ucdavis.fiehnlab.spectra.hash.core.types.SpectrumImpl;
 import io.github.dan2097.jnainchi.InchiStatus;
 import io.github.dan2097.jnainchi.JnaInchi;
 import org.apache.commons.lang3.tuple.Pair;
@@ -46,15 +52,6 @@ public class RecordParserDefinition extends GrammarDefinition {
 
     // legacy mode to let validation pass on legacy records until they are fixed
     private final boolean legacy;
-    // weak validation mode to let validation pass for AddMetaData
-    private final boolean weak;
-    // turn on additional validation steps, which require online checks; slow!
-    private final boolean online;
-
-
-    //private String InChiKeyFromCH_LINK = "";
-    //private int pk_num_peak = -1;
-
 
     // load a list of strings from .config or resource folder
     private static List<String> getResourceFileAsList(String fileName) {
@@ -73,51 +70,54 @@ public class RecordParserDefinition extends GrammarDefinition {
 
     public RecordParserDefinition(Set<String> config) {
         this.legacy = config.contains("legacy");
-        this.weak = config.contains("weak");
-        this.online = config.contains("online");
 
         def("start",
             ref("ACCESSION").map(this::setACCESSION)
-                .seq(ref("RECORD_TITLE")).map(this::setRECORD_TITLE)
-                .seq(ref("DATE")).map(this::setDATE)
-                .seq(ref("AUTHORS")).map(this::setAUTHORS)
-                .seq(ref("LICENSE")).map(this::setLICENSE)
-                .seq(ref("COPYRIGHT").optional()).map(this::setCOPYRIGHT)
-                .seq(ref("PUBLICATION").optional()).map(this::setPUBLICATION)
-                .seq(ref("PROJECT").optional()).map(this::setPROJECT)
-                .seq(ref("COMMENT").optional()).map(this::setCOMMENT)
-                .seq(ref("CH$NAME")).map(this::setCH_NAME)
-                .seq(ref("CH$COMPOUND_CLASS").optional()).map(this::setCH_COMPOUND_CLASS)
-                .seq(ref("CH$FORMULA")).map(this::setCH_FORMULA)
-                .seq(ref("CH$EXACT_MASS")).map(this::setCH_EXACT_MASS)
-                .seq(ref("CH$SMILES")).map(this::setCH_SMILES)
-                .seq(ref("CH$IUPAC")).map(this::setCH_IUPAC)
-                .seq(ref("CH$LINK").optional()).map(this::setCH_LINK)
-                .seq(ref("SP$SCIENTIFIC_NAME").optional()).map(this::setSP_SCIENTIFIC_NAME)
-                .seq(ref("SP$LINEAGE").optional()).map(this::setSP_LINEAGE)
-                .seq(ref("SP$LINK").optional()).map(this::setSP_LINK)
-                .seq(ref("SP$SAMPLE").optional()).map(this::setSP_SAMPLE)
-                .seq(ref("AC$INSTRUMENT")).map(this::setAC_INSTRUMENT)
-                .seq(ref("AC$INSTRUMENT_TYPE")).map(this::setAC_INSTRUMENT_TYPE)
-                .seq(ref("AC$MASS_SPECTROMETRY_MS_TYPE")).map(this::setAC_MASS_SPECTROMETRY_MS_TYPE)
-                .seq(ref("AC$MASS_SPECTROMETRY_ION_MODE")).map(this::setAC_MASS_SPECTROMETRY_ION_MODE)
-                .seq(ref("AC$MASS_SPECTROMETRY").optional()).map(this::setAC_MASS_SPECTROMETRY)
-                .seq(ref("AC$CHROMATOGRAPHY").optional()).map(this::setAC_CHROMATOGRAPHY)
-                .seq(ref("MS$FOCUSED_ION").optional()).map(this::setMS_FOCUSED_ION)
-                .seq(ref("MS$DATA_PROCESSING").optional()).map(this::setMS_DATA_PROCESSING)
-                .seq(ref("PK$SPLASH")).map(this::setPK_SPLASH)
-                .seq(ref("PK$ANNOTATION").optional()).map(this::setPK_ANNOTATION)
-                .seq(ref("PK$NUM_PEAK"))
-                .seq(ref("PK$PEAK")).map(this::setPK_PEAK)
-                .seq(ref("endtag"))
-                .pick(0)
-//                .map((Object value) -> {
+                .seq(ref("DEPRECATED")).map(this::setDEPRECATED)
+                .or(
+                    ref("ACCESSION").map(this::setACCESSION)
+                        .seq(ref("RECORD_TITLE")).map(this::setRECORD_TITLE)
+                        .seq(ref("DATE")).map(this::setDATE)
+                        .seq(ref("AUTHORS")).map(this::setAUTHORS)
+                        .seq(ref("LICENSE")).map(this::setLICENSE)
+                        .seq(ref("COPYRIGHT").optional()).map(this::setCOPYRIGHT)
+                        .seq(ref("PUBLICATION").optional()).map(this::setPUBLICATION)
+                        .seq(ref("PROJECT").optional()).map(this::setPROJECT)
+                        .seq(ref("COMMENT").optional()).map(this::setCOMMENT)
+                        .seq(ref("CH$NAME")).map(this::setCH_NAME)
+                        .seq(ref("CH$COMPOUND_CLASS").optional()).map(this::setCH_COMPOUND_CLASS)
+                        .seq(ref("CH$FORMULA")).map(this::setCH_FORMULA)
+                        .seq(ref("CH$EXACT_MASS")).map(this::setCH_EXACT_MASS)
+                        .seq(ref("CH$SMILES")).map(this::setCH_SMILES)
+                        .seq(ref("CH$IUPAC")).map(this::setCH_IUPAC)
+                        .seq(ref("CH$LINK").optional()).map(this::setCH_LINK)
+                        .seq(ref("SP$SCIENTIFIC_NAME").optional()).map(this::setSP_SCIENTIFIC_NAME)
+                        .seq(ref("SP$LINEAGE").optional()).map(this::setSP_LINEAGE)
+                        .seq(ref("SP$LINK").optional()).map(this::setSP_LINK)
+                        .seq(ref("SP$SAMPLE").optional()).map(this::setSP_SAMPLE)
+                        .seq(ref("AC$INSTRUMENT")).map(this::setAC_INSTRUMENT)
+                        .seq(ref("AC$INSTRUMENT_TYPE")).map(this::setAC_INSTRUMENT_TYPE)
+                        .seq(ref("AC$MASS_SPECTROMETRY_MS_TYPE")).map(this::setAC_MASS_SPECTROMETRY_MS_TYPE)
+                        .seq(ref("AC$MASS_SPECTROMETRY_ION_MODE")).map(this::setAC_MASS_SPECTROMETRY_ION_MODE)
+                        .seq(ref("AC$MASS_SPECTROMETRY").optional()).map(this::setAC_MASS_SPECTROMETRY)
+                        .seq(ref("AC$CHROMATOGRAPHY").optional()).map(this::setAC_CHROMATOGRAPHY)
+                        .seq(ref("MS$FOCUSED_ION").optional()).map(this::setMS_FOCUSED_ION)
+                        .seq(ref("MS$DATA_PROCESSING").optional()).map(this::setMS_DATA_PROCESSING)
+                        .seq(ref("PK$SPLASH")).map(this::setPK_SPLASH)
+                        .seq(ref("PK$ANNOTATION").optional()).map(this::setPK_ANNOTATION)
+                        .seq(ref("PK$NUM_PEAK"))
+                        .seq(ref("PK$PEAK")).map(this::setPK_PEAK)
+                        .seq(ref("endtag"))
+                        .pick(0)
+                        // check semantic here
+                        .callCC(config.contains("validate") ? this::checkSemantic : this::doNothing)
+                )
+//                .map((Record value) -> {
 //                    System.out.println(value);
 //                    return value;
 //                })
                 .end()
-            // check semantic here
-                .callCC(config.contains("validate") ? this::checkSemantic : this::doNothing)
+
         );
 
 
@@ -210,24 +210,13 @@ public class RecordParserDefinition extends GrammarDefinition {
         );
 
 
-        def("deprecated_record",
+        def("DEPRECATED",
             StringParser.of("DEPRECATED")
                 .seq(ref("tagsep"))
-                .map((List<?> value) -> {
-                    //System.out.println(value);
-                    //callback.DEPRECATED(true);
-                    return value;
-                })
                 .seq(CharacterParser.any().star()
                     .flatten()
-                    .map((String value) -> {
-                        //System.out.println(value);
-                        //callback.DEPRECATED_CONTENT(value);
-                        return value;
-                    })
                 )
-                .end()
-                .optional()
+                .pick(2)
 //			.map((List<?> value) -> {
 //				System.out.println(value);
 //				return value;
@@ -282,7 +271,8 @@ public class RecordParserDefinition extends GrammarDefinition {
                             DateTimeFormatter formatter = DateTimeFormatter.ofPattern("uuuu.MM.dd").withResolverStyle(ResolverStyle.STRICT);
                             LocalDate.parse(r.get(), formatter);
                         } catch (Exception e) {
-                            return context.failure("Can not parse DATE:\n" + e.getMessage());
+                            logger.error("Can not parse DATE:{}", e.getMessage());
+                            return context.failure("Can not parse DATE:" + e.getMessage());
                         }
                     }
                     return r;
@@ -464,8 +454,8 @@ public class RecordParserDefinition extends GrammarDefinition {
                             if (r.isSuccess()) {
                                 String comment = r.get();
                                 if ("CONFIDENCE".equals(comment.trim())) {
-                                    logger.error("Empty 'COMMENT: CONFIDENCE' field.");
-                                    return context.failure("Empty 'COMMENT: CONFIDENCE' field.");
+                                    logger.error("Empty 'COMMENT: CONFIDENCE' field not allowed.");
+                                    return context.failure("Empty 'COMMENT: CONFIDENCE' field not allowed.");
                                 }
 
                             }
@@ -530,8 +520,8 @@ public class RecordParserDefinition extends GrammarDefinition {
                         )
                         .map((List<?> value) -> {
                             List<String> result = new ArrayList<>();
-                            if (value.get(0) != null) {
-                                result.add((String) value.get(0));
+                            if (value.getFirst() != null) {
+                                result.add((String) value.getFirst());
                             }
                             if (value.get(1) != null) {
                                 result.addAll((List<String>) value.get(1));
@@ -547,7 +537,7 @@ public class RecordParserDefinition extends GrammarDefinition {
 //                    return value;
 //                })
 
-            );
+        );
 
 
         // 2.2.3 CH$FORMULA
@@ -794,7 +784,7 @@ public class RecordParserDefinition extends GrammarDefinition {
                 .seq(ch_link_subtag)
                 .seq(Token.NEWLINE_PARSER.not()).pick(2)
                 .seq(CharacterParser.any().plusLazy(Token.NEWLINE_PARSER).flatten())
-                .map((List<String> value) -> Pair.of(value.get(0).trim(), value.get(1)))
+                .map((List<String> value) -> Pair.of(value.getFirst().trim(), value.get(1)))
                 .seq(Token.NEWLINE_PARSER)
                 .pick(0)
                 .plus()
@@ -805,7 +795,8 @@ public class RecordParserDefinition extends GrammarDefinition {
                         Set<String> seenKeys = new HashSet<>();
                         for (Pair<String, String> pair : p) {
                             if (!seenKeys.add(pair.getKey())) {
-                                return context.failure("Duplicate entry " + pair.getKey() + " in CH$LINK.\n");
+                                logger.error("Duplicate entry {} in CH$LINK.", pair.getKey());
+                                return context.failure("Duplicate entry " + pair.getKey() + " in CH$LINK.");
                             }
                         }
                     }
@@ -870,7 +861,7 @@ public class RecordParserDefinition extends GrammarDefinition {
                 .seq(CharacterParser.any().plusLazy(CharacterParser.whitespace()).flatten())
                 .seq(CharacterParser.whitespace()).pick(3)
                 .seq(CharacterParser.any().plusLazy(Token.NEWLINE_PARSER).flatten())
-                .map((List<String> value) -> Pair.of(value.get(0).trim(), value.get(1)))
+                .map((List<String> value) -> Pair.of(value.getFirst().trim(), value.get(1)))
                 .seq(Token.NEWLINE_PARSER)
                 .pick(0)
                 .plus()
@@ -959,7 +950,7 @@ public class RecordParserDefinition extends GrammarDefinition {
                 .seq(ref("ac_instrument_type_ionisation"))
                 .seq(ref("ac_instrument_type_analyzer"))
                 .map((List<String> value) -> {
-                    if (value.get(0) == null) value.remove(0);
+                    if (value.getFirst() == null) value.removeFirst();
                     return String.join("-", value);
                 })
         );
@@ -1165,7 +1156,7 @@ public class RecordParserDefinition extends GrammarDefinition {
                             CharacterParser.letter().or(CharacterParser.digit()).or(CharacterParser.of('_')).or(CharacterParser.of('/'))
                                 .plus().flatten()
                                 .map((String value) -> {
-                                    logger.warn("Usage of free subtag \"" + value + "\" in AC$MASS_SPECTROMETRY is not recomended.");
+                                    logger.warn("Usage of free subtag \"{}\" in AC$MASS_SPECTROMETRY is not recomended.", value);
                                     return value;
                                 })
                                 .seq(CharacterParser.whitespace()).flatten()
@@ -1174,7 +1165,7 @@ public class RecordParserDefinition extends GrammarDefinition {
                         )
                 )
                 .seq(Token.NEWLINE_PARSER).pick(2)
-                .map((List<String> value) -> Pair.of(value.get(0).trim(), value.get(1)))
+                .map((List<String> value) -> Pair.of(value.getFirst().trim(), value.get(1)))
                 .plus()
 //                .map((Object value) -> {
 //                    System.out.println(value);
@@ -1249,7 +1240,7 @@ public class RecordParserDefinition extends GrammarDefinition {
                         CharacterParser.letter().or(CharacterParser.digit()).or(CharacterParser.of('_'))
                             .plus().flatten()
                             .map((String value) -> {
-                                logger.warn("Usage of free subtag \"" + value + "\" in AC$CHROMATOGRAPHY is not recomended.");
+                                logger.warn("Usage of free subtag \"{}\" in AC$CHROMATOGRAPHY is not recomended.", value);
                                 return value;
                             })
                             .seq(CharacterParser.whitespace()).flatten()
@@ -1257,7 +1248,7 @@ public class RecordParserDefinition extends GrammarDefinition {
                 )
                 .seq(Token.NEWLINE_PARSER.not()).pick(2)
                 .seq(CharacterParser.any().plusLazy(Token.NEWLINE_PARSER).flatten())
-                .map((List<String> value) -> Pair.of(value.get(0).trim(), value.get(1)))
+                .map((List<String> value) -> Pair.of(value.getFirst().trim(), value.get(1)))
                 .seq(Token.NEWLINE_PARSER).pick(0)
                 .plus()
 //                .map((Object value) -> {
@@ -1409,7 +1400,7 @@ public class RecordParserDefinition extends GrammarDefinition {
                         )
                 )
                 .seq(Token.NEWLINE_PARSER).pick(2)
-                .map((List<String> value) -> Pair.of(value.get(0).trim(), value.get(1)))
+                .map((List<String> value) -> Pair.of(value.getFirst().trim(), value.get(1)))
                 .plus()
 //                .map((Object value) -> {
 //                    System.out.println(value);
@@ -1447,7 +1438,7 @@ public class RecordParserDefinition extends GrammarDefinition {
                 .seq(ref("ms_data_processing_subtag"))
                 .seq(Token.NEWLINE_PARSER.not()).pick(2)
                 .seq(CharacterParser.any().plusLazy(Token.NEWLINE_PARSER).flatten())
-                .map((List<String> value) -> Pair.of(value.get(0).trim(), value.get(1)))
+                .map((List<String> value) -> Pair.of(value.getFirst().trim(), value.get(1)))
                 .seq(Token.NEWLINE_PARSER).pick(0)
                 .plus()
 //                .map((Object value) -> {
@@ -1492,7 +1483,7 @@ public class RecordParserDefinition extends GrammarDefinition {
                         .trim(CharacterParser.of(' '))
                         .plus()
                         .map((List<String> value) -> {
-                            value.add(0, "m/z");
+                            value.addFirst("m/z");
                             return value;
                         })
                 )
@@ -1509,7 +1500,7 @@ public class RecordParserDefinition extends GrammarDefinition {
                                 .trim(CharacterParser.of(' '))
                                 .plus()
                         )
-                        .map((List<?> value) -> Pair.of(new BigDecimal((String) value.get(0)), (List<String>) value.get(1)))
+                        .map((List<?> value) -> Pair.of(new BigDecimal((String) value.getFirst()), (List<String>) value.get(1)))
                         //TODO
                         // call a Continuation Parser to validate the count of PK$ANNOTATION items per line
 //                        .callCC((Function<Context, Result> continuation, Context context) -> {
@@ -1573,7 +1564,7 @@ public class RecordParserDefinition extends GrammarDefinition {
                         .seq(
                             ref("uint_primitive")
                         )
-                        .map((List<String> value) -> Triple.of(new BigDecimal(value.get(0)),
+                        .map((List<String> value) -> Triple.of(new BigDecimal(value.getFirst()),
                             new BigDecimal(value.get(1)),
                             Integer.parseInt(value.get(2))))
                         .seq(Token.NEWLINE_PARSER)
@@ -1595,98 +1586,98 @@ public class RecordParserDefinition extends GrammarDefinition {
     }
 
     private Record setRECORD_TITLE(List<?> value) {
-        Record record = (Record) value.get(0);
-        record.RECORD_TITLE1((String) value.get(value.size()-1));
+        Record record = (Record) value.getFirst();
+        record.RECORD_TITLE1((String) value.getLast());
         return record;
     }
 
     private Record setDATE(List<?> value) {
-        Record record = (Record) value.get(0);
-        record.DATE((String) value.get(value.size()-1));
+        Record record = (Record) value.getFirst();
+        record.DATE((String) value.getLast());
         return record;
     }
 
     private Record setAUTHORS(List<?> value) {
-        Record record = (Record) value.get(0);
-        record.AUTHORS((String) value.get(value.size()-1));
+        Record record = (Record) value.getFirst();
+        record.AUTHORS((String) value.getLast());
         return record;
     }
 
     private Record setLICENSE(List<?> value) {
-        Record record = (Record) value.get(0);
-        record.LICENSE((String) value.get(value.size()-1));
+        Record record = (Record) value.getFirst();
+        record.LICENSE((String) value.getLast());
         return record;
     }
 
     private Record setCOPYRIGHT(List<?> value) {
-        Record record = (Record) value.get(0);
-        if (value.get(value.size()-1) != null) record.COPYRIGHT((String) value.get(value.size()-1));
+        Record record = (Record) value.getFirst();
+        if (value.getLast() != null) record.COPYRIGHT((String) value.getLast());
         return record;
     }
 
     private Record setPUBLICATION(List<?> value) {
-        Record record = (Record) value.get(0);
-        if (value.get(value.size()-1) != null) record.PUBLICATION((String) value.get(value.size()-1));
+        Record record = (Record) value.getFirst();
+        if (value.getLast() != null) record.PUBLICATION((String) value.getLast());
         return record;
     }
 
     private Record setPROJECT(List<?> value) {
-        Record record = (Record) value.get(0);
-        if (value.get(value.size()-1) != null) record.PROJECT((String) value.get(value.size()-1));
+        Record record = (Record) value.getFirst();
+        if (value.getLast() != null) record.PROJECT((String) value.getLast());
         return record;
     }
 
     @SuppressWarnings("unchecked")
     private Record setCOMMENT(List<?> value) {
-        Record record = (Record) value.get(0);
-        if (value.get(value.size()-1) != null) record.COMMENT((List<String>) value.get(value.size()-1));
+        Record record = (Record) value.getFirst();
+        if (value.getLast() != null) record.COMMENT((List<String>) value.getLast());
         return record;
     }
 
     @SuppressWarnings("unchecked")
     private Record setCH_NAME(List<?> value) {
-        Record record = (Record) value.get(0);
-        if (value.get(value.size()-1) != null) record.CH_NAME((List<String>) value.get(value.size()-1));
+        Record record = (Record) value.getFirst();
+        if (value.getLast() != null) record.CH_NAME((List<String>) value.getLast());
         return record;
     }
 
     @SuppressWarnings("unchecked")
     private Record setCH_COMPOUND_CLASS(List<?> value) {
-        Record record = (Record) value.get(0);
-        if (value.get(value.size()-1) != null) record.CH_COMPOUND_CLASS((List<String>) value.get(value.size()-1));
+        Record record = (Record) value.getFirst();
+        if (value.getLast() != null) record.CH_COMPOUND_CLASS((List<String>) value.getLast());
         return record;
     }
 
     private Record setCH_FORMULA(List<?> value) {
-        Record record = (Record) value.get(0);
-        record.CH_FORMULA((String) value.get(value.size()-1));
+        Record record = (Record) value.getFirst();
+        record.CH_FORMULA((String) value.getLast());
         return record;
     }
 
     private Record setCH_EXACT_MASS(List<?> value) {
-        Record record = (Record) value.get(0);
-        record.CH_EXACT_MASS((BigDecimal) value.get(value.size()-1));
+        Record record = (Record) value.getFirst();
+        record.CH_EXACT_MASS((BigDecimal) value.getLast());
         return record;
     }
 
     private Record setCH_SMILES(List<?> value) {
-        Record record = (Record) value.get(0);
-        record.CH_SMILES((String) value.get(value.size()-1));
+        Record record = (Record) value.getFirst();
+        record.CH_SMILES((String) value.getLast());
         return record;
     }
 
     private Record setCH_IUPAC(List<?> value) {
-        Record record = (Record) value.get(0);
-        record.CH_IUPAC((String) value.get(value.size()-1));
+        Record record = (Record) value.getFirst();
+        record.CH_IUPAC((String) value.getLast());
         return record;
     }
 
     @SuppressWarnings("unchecked")
     private Record setCH_LINK(List<?> value) {
-        Record record = (Record) value.get(0);
-        if (value.get(value.size()-1) != null) {
+        Record record = (Record) value.getFirst();
+        if (value.getLast() != null) {
             LinkedHashMap<String, String> map = new LinkedHashMap<>();
-            for (Pair<String, String> pair : (List<Pair<String, String>>) value.get(value.size()-1)) {
+            for (Pair<String, String> pair : (List<Pair<String, String>>) value.getLast()) {
                 map.put(pair.getKey(), pair.getValue());
             }
             record.CH_LINK(map);
@@ -1695,23 +1686,23 @@ public class RecordParserDefinition extends GrammarDefinition {
     }
 
     private Record setSP_SCIENTIFIC_NAME(List<?> value) {
-        Record record = (Record) value.get(0);
-        if (value.get(value.size()-1) != null) record.SP_SCIENTIFIC_NAME((String) value.get(value.size()-1));
+        Record record = (Record) value.getFirst();
+        if (value.getLast() != null) record.SP_SCIENTIFIC_NAME((String) value.getLast());
         return record;
     }
 
     private Record setSP_LINEAGE(List<?> value) {
-        Record record = (Record) value.get(0);
-        if (value.get(value.size()-1) != null) record.SP_LINEAGE((String) value.get(value.size()-1));
+        Record record = (Record) value.getFirst();
+        if (value.getLast() != null) record.SP_LINEAGE((String) value.getLast());
         return record;
     }
 
     @SuppressWarnings("unchecked")
     private Record setSP_LINK(List<?> value) {
-        Record record = (Record) value.get(0);
-        if (value.get(value.size()-1) != null) {
+        Record record = (Record) value.getFirst();
+        if (value.getLast() != null) {
             LinkedHashMap<String, String> map = new LinkedHashMap<>();
-            for (Pair<String, String> pair : (List<Pair<String, String>>) value.get(value.size()-1)) {
+            for (Pair<String, String> pair : (List<Pair<String, String>>) value.getLast()) {
                 map.put(pair.getKey(), pair.getValue());
             }
             record.SP_LINK(map);
@@ -1721,73 +1712,78 @@ public class RecordParserDefinition extends GrammarDefinition {
 
     @SuppressWarnings("unchecked")
     private Record setSP_SAMPLE(List<?> value) {
-        Record record = (Record) value.get(0);
-        if (value.get(value.size()-1) != null) record.SP_SAMPLE((List<String>) value.get(value.size()-1));
+        Record record = (Record) value.getFirst();
+        if (value.getLast() != null) record.SP_SAMPLE((List<String>) value.getLast());
         return record;
     }
 
     private Record setAC_INSTRUMENT(List<?> value) {
-        Record record = (Record) value.get(0);
-        record.AC_INSTRUMENT((String) value.get(value.size()-1));
+        Record record = (Record) value.getFirst();
+        record.AC_INSTRUMENT((String) value.getLast());
         return record;
     }
 
     private Record setAC_INSTRUMENT_TYPE(List<?> value) {
-        Record record = (Record) value.get(0);
-        record.AC_INSTRUMENT_TYPE((String) value.get(value.size()-1));
+        Record record = (Record) value.getFirst();
+        record.AC_INSTRUMENT_TYPE((String) value.getLast());
         return record;
     }
 
     private Record setAC_MASS_SPECTROMETRY_MS_TYPE(List<?> value) {
-        Record record = (Record) value.get(0);
-        record.AC_MASS_SPECTROMETRY_MS_TYPE((String) value.get(value.size()-1));
+        Record record = (Record) value.getFirst();
+        record.AC_MASS_SPECTROMETRY_MS_TYPE((String) value.getLast());
         return record;
     }
 
     private Record setAC_MASS_SPECTROMETRY_ION_MODE(List<?> value) {
-        Record record = (Record) value.get(0);
-        record.AC_MASS_SPECTROMETRY_ION_MODE((String) value.get(value.size()-1));
+        Record record = (Record) value.getFirst();
+        record.AC_MASS_SPECTROMETRY_ION_MODE((String) value.getLast());
         return record;
     }
 
     @SuppressWarnings("unchecked")
     private Record setAC_MASS_SPECTROMETRY(List<?> value) {
-        Record record = (Record) value.get(0);
-        if (value.get(value.size()-1) != null) record.AC_MASS_SPECTROMETRY((List<Pair<String, String>>) value.get(value.size()-1));
+        Record record = (Record) value.getFirst();
+        if (value.getLast() != null)
+            record.AC_MASS_SPECTROMETRY((List<Pair<String, String>>) value.getLast());
         return record;
     }
 
     @SuppressWarnings("unchecked")
     private Record setAC_CHROMATOGRAPHY(List<?> value) {
-        Record record = (Record) value.get(0);
-        if (value.get(value.size()-1) != null) record.AC_CHROMATOGRAPHY((List<Pair<String, String>>) value.get(value.size()-1));
+        Record record = (Record) value.getFirst();
+        if (value.getLast() != null)
+            record.AC_CHROMATOGRAPHY((List<Pair<String, String>>) value.getLast());
         return record;
     }
 
     @SuppressWarnings("unchecked")
     private Record setMS_FOCUSED_ION(List<?> value) {
-        Record record = (Record) value.get(0);
-        if (value.get(value.size()-1) != null) record.MS_FOCUSED_ION((List<Pair<String, String>>) value.get(value.size()-1));
+        Record record = (Record) value.getFirst();
+        if (value.getLast() != null)
+            record.MS_FOCUSED_ION((List<Pair<String, String>>) value.getLast());
         return record;
     }
 
     @SuppressWarnings("unchecked")
     private Record setMS_DATA_PROCESSING(List<?> value) {
-        Record record = (Record) value.get(0);
-        if (value.get(value.size()-1) != null) record.MS_DATA_PROCESSING((List<Pair<String, String>>) value.get(value.size()-1));
+        Record record = (Record) value.getFirst();
+        if (value.getLast() != null)
+            record.MS_DATA_PROCESSING((List<Pair<String, String>>) value.getLast());
         return record;
     }
 
     private Record setPK_SPLASH(List<?> value) {
-        Record record = (Record) value.get(0);
-        record.PK_SPLASH((String) value.get(value.size()-1));
+        Record record = (Record) value.getFirst();
+        record.PK_SPLASH((String) value.getLast());
         return record;
     }
 
+    @SuppressWarnings("unchecked")
     private Record setPK_ANNOTATION(List<?> value) {
-        Record record = (Record) value.get(0);
+        Record record = (Record) value.getFirst();
         if (value.get(1) != null) {
-            record.PK_ANNOTATION_HEADER((List<String>) ((List<?>) value.get(1)).get(0));
+            record.PK_ANNOTATION_HEADER((List<String>) ((List<?>) value.get(1)).getFirst());
             for (Pair<BigDecimal, List<String>> annotationLine : (List<Pair<BigDecimal, List<String>>>) ((List<?>) value.get(1)).get(1)) {
                 record.PK_ANNOTATION_ADD_LINE(annotationLine);
             }
@@ -1795,11 +1791,19 @@ public class RecordParserDefinition extends GrammarDefinition {
         return record;
     }
 
+    @SuppressWarnings("unchecked")
     private Record setPK_PEAK(List<?> value) {
-        Record record = (Record) value.get(0);
+        Record record = (Record) value.getFirst();
         for (Triple<BigDecimal, BigDecimal, Integer> peak : (List<Triple<BigDecimal, BigDecimal, Integer>>) value.get(2)) {
             record.PK_PEAK_ADD_LINE(peak);
         }
+        return record;
+    }
+
+    private Record setDEPRECATED(List<?> value) {
+        Record record = (Record) value.getFirst();
+        record.DEPRECATED(true);
+        record.DEPRECATED_CONTENT((String) value.get(1));
         return record;
     }
 
@@ -1819,14 +1823,15 @@ public class RecordParserDefinition extends GrammarDefinition {
                 String StringFromCH_FORMULA = MolecularFormulaManipulator.getString(fromCH_FORMULA);
                 if (!StringFromCH_FORMULA.equals(record.CH_FORMULA())) {
                     return context.failure("Can not read formula in \"CH$FORMULA\" field correctly.\n"
-                        + "Formula from CH$FORMULA: " +record.CH_FORMULA() + "\n"
+                        + "Formula from CH$FORMULA: " + record.CH_FORMULA() + "\n"
                         + "Formula after parsing  : " + StringFromCH_FORMULA);
                 }
             }
 
             // validate SMILES
             IAtomContainer fromCH_SMILES;
-            String InChiKeyFromCH_SMILES;
+            String InChiKeyFromCH_SMILES = null;
+            boolean smilesHasWildcards = false;
             if (!"N/A".equals(record.CH_SMILES())) {
                 try {
                     fromCH_SMILES = new SmilesParser(SilentChemObjectBuilder.getInstance()).parseSmiles(record.CH_SMILES());
@@ -1834,7 +1839,6 @@ public class RecordParserDefinition extends GrammarDefinition {
                     return context.failure("Can not parse SMILES string in \"CH$SMILES\" field.\nError from CDK:\n" + e.getMessage());
                 }
                 // create InChIKey from SMILES if it is a full defined structure
-                boolean smilesHasWildcards = false;
                 for (IAtom atom : fromCH_SMILES.atoms()) {
                     if (atom.getAtomicNumber() == 0) smilesHasWildcards = true;
                 }
@@ -1857,15 +1861,15 @@ public class RecordParserDefinition extends GrammarDefinition {
             }
 
             // validate InChI
-            IAtomContainer fromCH_IUPAC;
-            String InChiKeyFromCH_IUPAC;
+            IAtomContainer fromCH_IUPAC = null;
+            String InChiKeyFromCH_IUPAC = null;
             if (!"N/A".equals(record.CH_IUPAC())) {
                 try {
                     InChIToStructure intoStruct = InChIGeneratorFactory.getInstance().getInChIToStructure(record.CH_IUPAC(), SilentChemObjectBuilder.getInstance());
                     InchiStatus ret = intoStruct.getStatus();
                     if (ret == InchiStatus.WARNING) {
                         // Structure generated, but with warning message
-                        logger.warn("InChI warning: " + intoStruct.getMessage());
+                        logger.warn("InChI warning: {}", intoStruct.getMessage());
                         //logger.warn(callback.ACCESSION());
                     } else if (ret == InchiStatus.ERROR) {
                         // Structure generation failed
@@ -1879,141 +1883,127 @@ public class RecordParserDefinition extends GrammarDefinition {
                 InChiKeyFromCH_IUPAC = JnaInchi.inchiToInchiKey(record.CH_IUPAC()).getInchiKey();
             }
 
-            // compare the structure from CH$LINK, CH$SMILES and CH$IUPAC based on the InChIKey
-            String InChiKeyFromCH_LINK;
+            // get InChIKey from CH$LINK
+            String InChiKeyFromCH_LINK = null;
             if (record.CH_LINK().containsKey("INCHIKEY")) {
-                InChiKeyFromCH_LINK=record.CH_LINK().get("INCHIKEY");
+                InChiKeyFromCH_LINK = record.CH_LINK().get("INCHIKEY");
+                if ("N/A".equals(record.CH_IUPAC()))
+                    return context.failure("If INCHIKEY is given in CH$LINK, CH$IUPAC can not be \"N/A\".");
             }
 
-//                        if ("INCHIKEY".equals(p.getKey())) {
-//                            if (!p.getValue().equals(InChiKeyFromCH_IUPAC)) {
-//                                logger.error("InChIKey generated from InChI string in \"CH$IUPAC\" field does not match InChIKey in \"CH$LINK\".\n"
-//                                    + "CH$LINK: INCHIKEY:  " + p.getValue() + "\n"
-//                                    + "InChIKey generated: " + InChiKeyFromCH_IUPAC);
-//                                return context.failure("InChIKey generated from InChI string in \"CH$IUPAC\" field does not match InChIKey in \"CH$LINK\".\n"
-//                                    + "CH$LINK: INCHIKEY:  " + p.getValue() + "\n"
-//                                    + "InChIKey generated: " + InChiKeyFromCH_IUPAC);
-//                            }
-//                            InChiKeyFromCH_LINK=p.getValue();
-//                        }
-//                        ch_link.put(p.getKey(), p.getValue());
-//                        //callback.CH_LINK(ch_link);
-//                    }
-//                    return r;
-//                })
+            // if any structural information is in CH$IUPAC, then CH$FORMULA, CH$SMILES CH$LINK: INCHIKEY must be defined and match
+            if (!"N/A".equals(record.CH_IUPAC())) {
+                if (InChiKeyFromCH_IUPAC == null) throw new RuntimeException("unexpected condition");
+                // no N/A allowed
+                if ("N/A".equals(record.CH_SMILES()))
+                    return context.failure("If CH$IUPAC is defined, CH$SMILES can not be \"N/A\".");
+                if ("N/A".equals(record.CH_FORMULA()))
+                    return context.failure("If CH$IUPAC is defined, CH$FORMULA can not be \"N/A\".");
+                // check content of CH$SMILES for equality
+                if (InChiKeyFromCH_SMILES == null) throw new RuntimeException("unexpected condition");
+                logger.trace("InChIKey from CH$SMILES: {}", InChiKeyFromCH_SMILES);
+                logger.trace("InChIKey from CH$IUPAC:  {}", InChiKeyFromCH_IUPAC);
+                if (legacy) {
+                    if (InChiKeyFromCH_SMILES.length() != 27 || InChiKeyFromCH_IUPAC.length() != 27 || !InChiKeyFromCH_SMILES.substring(0, 14).equals(InChiKeyFromCH_IUPAC.substring(0, 14))) {
+                        return context.failure("InChIKey generated from SMILES string in \"CH$SMILES\" field does not match InChIKey from \"CH$IUPAC\".\n"
+                            + "InChIKey from CH$SMILES: " + InChiKeyFromCH_SMILES + "\n"
+                            + "InChIKey from CH$IUPAC:  " + InChiKeyFromCH_IUPAC);
+                    }
+                } else {
+                    if (!InChiKeyFromCH_SMILES.equals(InChiKeyFromCH_IUPAC)) {
+                        return context.failure("InChIKey generated from SMILES string in \"CH$SMILES\" field does not match InChIKey from \"CH$IUPAC\".\n"
+                            + "InChIKey from CH$SMILES: " + InChiKeyFromCH_SMILES + "\n"
+                            + "InChIKey from CH$IUPAC:  " + InChiKeyFromCH_IUPAC);
+                    }
+                }
+                // check for matching InChIKey in CH$LINK
+                if (InChiKeyFromCH_LINK != null && !InChiKeyFromCH_LINK.equals(InChiKeyFromCH_IUPAC)) {
+                    logger.error("InChIKey generated from InChI string in \"CH$IUPAC\" field does not match InChIKey in \"CH$LINK\".\n"
+                        + "CH$LINK: INCHIKEY:  " +InChiKeyFromCH_LINK + "\n"
+                        + "InChIKey generated: " + InChiKeyFromCH_IUPAC);
+                    return context.failure("InChIKey generated from InChI string in \"CH$IUPAC\" field does not match InChIKey in \"CH$LINK\".\n"
+                        + "CH$LINK: INCHIKEY:  " + InChiKeyFromCH_LINK + "\n"
+                        + "InChIKey generated: " + InChiKeyFromCH_IUPAC);
+                }
+                // check content of CH$FORMULA for equality
+                if (fromCH_IUPAC == null) throw new RuntimeException("unexpected condition");
+                String formulaFromInChI = MolecularFormulaManipulator.getString(MolecularFormulaManipulator.getMolecularFormula(fromCH_IUPAC));
+                logger.trace("Formula from CH$FORMULA: {}", record.CH_FORMULA());
+                logger.trace("Formula from CH$IUPAC:   {}", formulaFromInChI);
+                if (!formulaFromInChI.equals(record.CH_FORMULA())) {
+                    return context.failure("Formula generated from InChI string in \"CH$IUPAC\" field does not match formula in \"CH$FORMULA\".\n"
+                        + "Formula from CH$IUPAC:   " + formulaFromInChI + "\n"
+                        + "Formula from CH$FORMULA: " + record.CH_FORMULA());
+                }
+            }
+
+            if (!"N/A".equals(record.CH_SMILES())) {
+                // N/A in CH$IUPAC or CH$FORMULA are only allowed if SMILES string contains wildcards
+                if (!smilesHasWildcards) {
+                    if ("N/A".equals(record.CH_IUPAC()))
+                        return context.failure("If CH$SMILES is defined and without wildcards, CH$IUPAC can not be \"N/A\".");
+                    if ("N/A".equals(record.CH_FORMULA()))
+                        return context.failure("If CH$SMILES is defined and without wildcards, CH$FORMULA can not be \"N/A\".");
+                } else {
+                    logger.trace("SMILES with wildcards defined");
+                }
+            }
+
+            // validate the number of peaks in the peaklist
+            List<Triple<BigDecimal, BigDecimal, Integer>> pk_peak = record.PK_PEAK();
+            if (pk_peak.size() != record.PK_NUM_PEAK()) {
+                return context.failure("Incorrect number of peaks in peaklist. " + record.PK_NUM_PEAK()
+                    + " peaks are declared in PK$NUM_PEAK line, but " + pk_peak.size() + " peaks are found.");
+            }
+
+            // validate the SPLASH
+            List<Ion> ions = new ArrayList<>();
+            for (Triple<BigDecimal, BigDecimal, Integer> peak : pk_peak) {
+                ions.add(new Ion(peak.getLeft().doubleValue(), peak.getMiddle().doubleValue()));
+            }
+            Splash splashFactory = SplashFactory.create();
+            Spectrum spectrum = new SpectrumImpl(ions, SpectraType.MS);
+            String splash_from_peaks = splashFactory.splashIt(spectrum);
+            String splash_from_record = record.PK_SPLASH();
+            if (!splash_from_peaks.equals(splash_from_record)) {
+                return context.failure("SPLASH from record file does not match SPLASH calculated from peaklist. "
+                    + splash_from_record + " defined in record file, but " + splash_from_peaks + " calculated from peaks.");
+            }
+
+            // check peak sorting
+            for (int i = 0; i < pk_peak.size() - 1; i++) {
+                if ((pk_peak.get(i).getLeft().compareTo(pk_peak.get(i + 1).getLeft())) >= 0) {
+                    return context.failure("The peaks in the peak list are not sorted.\n"
+                        + "Error in line " + pk_peak.get(i).toString() + ".");
+                }
+            }
+
+            // check annotation sorting
+            List<Pair<BigDecimal, List<String>>> pk_annotation = record.PK_ANNOTATION();
+            for (int i = 0; i < pk_annotation.size() - 1; i++) {
+                if ((pk_annotation.get(i).getLeft().compareTo(pk_annotation.get(i + 1).getLeft())) > 0) {
+                    return context.failure("The peaks in the annotation list are not sorted.\n"
+                        + "Error in line " + pk_annotation.get(i).toString() + ".");
+                }
+            }
+
+            // max 600 characters are supported in database for PUBLICATION
+            if (record.PUBLICATION() != null) {
+                if (record.PUBLICATION().length() > 600) {
+                    return context.failure("PUBLICATION length exceeds database limit of 600 characters.");
+                }
+            }
+
+            // max 600 characters are supported in database for RECORD_TITLE
+            if (record.RECORD_TITLE1().length() > 600) {
+                return context.failure("RECORD_TITLE length exceeds database limit of 600 characters.");
+            }
+
 
         }
-//            // if any structural information is in CH$IUPAC, then CH$FORMULA, CH$SMILES CH$LINK: INCHIKEY must be defined and match
-//            if (!"N/A".equals(callback.CH_IUPAC())) {
-//                //compare SMILES
-//                if ("N/A".equals(callback.CH_SMILES()))
-//                    return context.failure("If CH$IUPAC is defined, CH$SMILES can not be \"N/A\".");
-//                // compare the structures in CH$SMILES and CH$IUPAC with the help of InChIKeys
-//                logger.trace("InChIKey from CH$SMILES: " + InChiKeyFromCH_SMILES);
-//                logger.trace("InChIKey from CH$IUPAC:  " + InChiKeyFromCH_IUPAC);
-//
-//                // in legacy mode only check field1 of InChIKey
-//                if (legacy) {
-//                    if (InChiKeyFromCH_SMILES.length() != 27 || InChiKeyFromCH_IUPAC.length() != 27 || !InChiKeyFromCH_SMILES.substring(0, 14).equals(InChiKeyFromCH_IUPAC.substring(0, 14))) {
-//                        return context.failure("InChIKey generated from SMILES string in \"CH$SMILES\" field does not match InChIKey from \"CH$IUPAC\".\n"
-//                            + "InChIKey from CH$SMILES: " + InChiKeyFromCH_SMILES + "\n"
-//                            + "InChIKey from CH$IUPAC:  " + InChiKeyFromCH_IUPAC);
-//                    }
-//                } else {
-//                    if (!InChiKeyFromCH_SMILES.equals(InChiKeyFromCH_IUPAC)) {
-//                        return context.failure("InChIKey generated from SMILES string in \"CH$SMILES\" field does not match InChIKey from \"CH$IUPAC\".\n"
-//                            + "InChIKey from CH$SMILES: " + InChiKeyFromCH_SMILES + "\n"
-//                            + "InChIKey from CH$IUPAC:  " + InChiKeyFromCH_IUPAC);
-//                    }
-//                }
-//
-//                //compare formula
-//                if ("N/A".equals(callback.CH_FORMULA()))
-//                    return context.failure("If CH$IUPAC is defined, CH$FORMULA can not be \"N/A\".");
-//                // this code compares the molecular formula from the InChI with CH$FORMULA
-//                String formulaFromInChI = MolecularFormulaManipulator.getString(MolecularFormulaManipulator.getMolecularFormula(fromCH_IUPAC));
-//                logger.trace("Formula from CH$FORMULA: " + callback.CH_FORMULA());
-//                logger.trace("Formula from CH$IUPAC:   " + formulaFromInChI);
-//                if (!formulaFromInChI.equals(callback.CH_FORMULA())) {
-//                    return context.failure("Formula generated from InChI string in \"CH$IUPAC\" field does not match formula in \"CH$FORMULA\".\n"
-//                        + "Formula from CH$IUPAC:   " + formulaFromInChI + "\n"
-//                        + "Formula from CH$FORMULA: " + callback.CH_FORMULA());
-//                }
-//
-//                if (!weak) {
-//                    //compare InChIKey
-//                    if (InChiKeyFromCH_LINK.equals("")) {
-//                        logger.warn("CH$IUPAC is defined, but CH$LINK: INCHIKEY is missing.");
-//                    }
-//                }
-//            } else if (!"N/A".equals(callback.CH_SMILES())) {
-//                if (!smilesHasWildcards)
-//                    return context.failure("If CH$SMILES is defined, CH$IUPAC can not be \"N/A\".");
-//                logger.trace("SMILES with wildcards defined");
-//            }
-//
-//
-//            // validate the number of peaks in the peaklist
-//            List<Triple<BigDecimal, BigDecimal, Integer>> pk_peak = callback.PK_PEAK();
-//            if (pk_peak.size() != pk_num_peak) {
-//                StringBuilder sb = new StringBuilder();
-//                sb.append("Incorrect number of peaks in peaklist. ");
-//                sb.append(pk_num_peak + " peaks are declared in PK$NUM_PEAK line, but " + pk_peak.size() + " peaks are found.\n");
-//                return context.failure(sb.toString());
-//            }
-//
-//
-//            // validate the SPLASH
-//            List<Ion> ions = new ArrayList<Ion>();
-//            for (Triple<BigDecimal, BigDecimal, Integer> peak : pk_peak) {
-//                ions.add(new Ion(peak.getLeft().doubleValue(), peak.getMiddle().doubleValue()));
-//            }
-//            Splash splashFactory = SplashFactory.create();
-//            Spectrum spectrum = new SpectrumImpl(ions, SpectraType.MS);
-//            String splash_from_peaks = splashFactory.splashIt(spectrum);
-//            String splash_from_record = callback.PK_SPLASH();
-//            if (!splash_from_peaks.equals(splash_from_record)) {
-//                StringBuilder sb = new StringBuilder();
-//                sb.append("SPLASH from record file does not match SPLASH calculated from peaklist. ");
-//                sb.append(splash_from_record + " defined in record file, but " + splash_from_peaks + " calculated from peaks.\n");
-//                return context.failure(sb.toString());
-//            }
-//
-//
-//            // check peak sorting
-//            for (int i = 0; i < pk_peak.size() - 1; i++) {
-//                if ((pk_peak.get(i).getLeft().compareTo(pk_peak.get(i + 1).getLeft())) >= 0) {
-//                    StringBuilder sb = new StringBuilder();
-//                    sb.append("The peaks in the peak list are not sorted.\n");
-//                    sb.append("Error in line " + pk_peak.get(i).toString() + ".\n");
-//                    return context.failure(sb.toString());
-//                }
-//            }
-//
-//            // check annotation sorting
-//            List<Pair<BigDecimal, List<String>>> pk_annotation = callback.PK_ANNOTATION();
-//            for (int i = 0; i < pk_annotation.size() - 1; i++) {
-//                if ((pk_annotation.get(i).getLeft().compareTo(pk_annotation.get(i + 1).getLeft())) > 0) {
-//                    StringBuilder sb = new StringBuilder();
-//                    sb.append("The peaks in the annotation list are not sorted.\n");
-//                    sb.append("Error in line " + pk_annotation.get(i).toString() + ".\n");
-//                    return context.failure(sb.toString());
-//                }
-//            }
-//
-//            // max 600 characters are supported in database for PUBLICATION
-//            if (callback.PUBLICATION() != null) {
-//                if (callback.PUBLICATION().length() > 600) {
-//                    StringBuilder sb = new StringBuilder();
-//                    sb.append("PUBLICATION length exeeds database limit of 600 characters.\n");
-//                    return context.failure(sb.toString());
-//                }
-//            }
-//
-//            // max 600 characters are supported in database for RECORD_TITLE
-//            if (callback.RECORD_TITLE1().length() > 600) {
-//                return context.failure("RECORD_TITLE length exeeds database limit of 600 characters.\n");
-//            }
+
+
+
 //
 //
 //            // check for duplicate entries in CH$NAME
